--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "main": "main.js",
   "dependencies": {
     "express": "^4.8.3",
-    "ws": "^0.4.32"
+    "ws": "^0.4.32",
+    "jasmine-node": "^1.14.5"
   }
 }
