--- a/Server/package.json
+++ b/Server/package.json
@@ -2,10 +2,13 @@
   "name": "Grad-Project-2014",
   "version": "0.0.1",
   "description": "A game with no name",
-  "main": "main.js",
+  "main": "src/main.js",
   "dependencies": {
     "express": "^4.8.3",
     "ws": "^0.4.32",
     "jasmine-node": "^1.14.5"
+  },
+  "devDependencies": {
+    "grunt": "^0.4.5"
   }
 }
