--- a/Server/package.json
+++ b/Server/package.json
@@ -6,7 +6,8 @@
   "dependencies": {
     "express": "^4.8.3",
     "ws": "^0.4.32",
-    "jasmine-node": "^1.14.5"
+    "jasmine-node": "^1.14.5",
+    "mongodb": "^1.4.8"
   },
   "devDependencies": {
     "grunt": "^0.4.5"
