--- a/Server/package.json
+++ b/Server/package.json
@@ -10,6 +10,8 @@
     "mongodb": "^1.4.8"
   },
   "devDependencies": {
-    "grunt": "^0.4.5"
+    "grunt": "^0.4.5",
+    "grunt-shell": "^1.0.1",
+    "grunt-contrib-jshint": "^0.10.0"
   }
 }
