--- a/Server/package.json
+++ b/Server/package.json
@@ -6,12 +6,12 @@
   "dependencies": {
     "express": "^4.8.3",
     "ws": "^0.4.32",
-    "jasmine-node": "^1.14.5",
     "mongodb": "^1.4.8"
   },
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-shell": "^1.0.1",
-    "grunt-contrib-jshint": "^0.10.0"
+    "grunt-contrib-jshint": "^0.10.0",
+    "grunt-jasmine-node": "^0.2.1",
+    "grunt-shell": "^1.0.1"
   }
 }
