--- a/package.json
+++ b/package.json
@@ -18,16 +18,14 @@
   },
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-contrib-clean": "^0.6.0",
     "grunt-contrib-copy": "^0.5.0",
     "grunt-contrib-jasmine": "^0.7.0",
     "grunt-contrib-jshint": "^0.10.0",
     "grunt-contrib-less": "^0.11.4",
     "grunt-contrib-requirejs": "^0.4.4",
+    "grunt-execute": "^0.2.2",
     "grunt-jasmine-node": "^0.2.1",
-    "grunt-mkdir": "^0.1.2",
     "grunt-shell": "^1.0.1",
-    "grunt-shell-spawn": "^0.3.0",
     "grunt-template-jasmine-requirejs": "^0.2.0",
     "jasmine-node": "^1.14.5"
   }
