--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   },
   "devDependencies": {
     "grunt": "^0.4.5",
+    "grunt-autoprefixer": "^1.0.1",
     "grunt-contrib-copy": "^0.5.0",
     "grunt-contrib-jasmine": "^0.7.0",
     "grunt-contrib-jshint": "^0.10.0",
